@@ -1,3 +1,12 @@
+2023-05-23  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-terminal-type): Fix docstring.
+	(tramp-process-one-action): Delete ANSI control escape sequences
+	in buffer.  (Bug#63539)
+
+	* tramp-sh.el (tramp-barf-if-no-shell-prompt):
+	Remove `ansi-color-control-seq-regexp'.
+
 2023-05-22  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-dissect-file-name): Set hop to nil if NODEFAULT.
